--- a/src/ActionInput/index.module.css
+++ b/src/ActionInput/index.module.css
@@ -1,9 +1,26 @@
 .inputContainer {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   height: 3rem;
-  border: 2px solid var(--color-primary);
+  border: 1px solid;
   border-radius: 1.5rem;
+  box-sizing: border-box;
+}
+
+.inputContainer:hover, .inputContainer:focus-within {
+  border: 2px solid;
+}
+
+.disabled, .disabled:hover, .disabled:focus-within {
+  border: 1px solid var(--color-text-disabled);
+}
+
+.disabled *, .disabled *:before, .disabled *:after {
+  color: var(--color-text-disabled) !important;
+  fill: var(--color-text-disabled) !important;
+  stroke: var(--color-text-disabled) !important;
+  border-color: var(--color-text-disabled) !important;
+  pointer-events: none;
 }
 
 .input {
@@ -12,6 +29,12 @@
   margin-left: 1.5rem;
   margin-right: 0.5rem;
   font-size: 1rem;
+  width: 100%;
+  background-color: transparent;
+  color: var(--color-text-primary)
+}
+
+.block {
   width: 100%;
 }
 
