--- a/src/Tabs/index.module.css
+++ b/src/Tabs/index.module.css
@@ -7,7 +7,7 @@
 
 .tabContainer.inner {
   background: var(--color-bg-grey-3);
-  box-shadow: 0px -12px 40px rgba(255, 255, 255, 0.7),
+  box-shadow: 0px -12px 40px var(--color-shadow),
     0px 20px 30px rgba(27, 31, 39, 0.06);
 }
 
