--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -1,15 +1,50 @@
 .wrapper {
     display: inline-block;
     width: 14rem;
-    margin-bottom: 10px;
+    margin: 10px 0;
+}
+.child {
+    position: relative;
 }
 
-.child > * {
+.child > :not(.label) {
     width: 100%;
 }
 
+.child * {
+    margin: 0;
+}
+
+.label {
+    font-family: var(--font-regular);
+    color: var(--color-text-secondary);
+    font-style: normal;
+    font-weight: normal;
+    font-size: 1rem;
+    line-height: 1.5rem;
+    position: absolute;
+    top: 0.75rem;
+    left: 1.5rem;
+    transition: 0.25s;
+    pointer-events: none;
+    z-index: 1;
+}
+
+.wrapper:focus-within .label, .focused {
+    font-size: 0.875rem;
+    line-height: 1.5rem;
+    top: -0.8rem;
+    background: var(--color-bg-input);
+    padding: 0 0.5rem;
+    left: 1rem;
+    border-radius: 1.5rem;
+}
+
+.wrapper input::placeholder {
+    color: transparent;
+}
+
 .itemContainer {
-    position: relative;
     display: block;
     margin-left: 0;
 }
@@ -18,16 +53,6 @@
   margin-bottom: 0;
 }
 
-.inputLabel {
-    font-family: var(--font-regular);
-    color: var(--color-text-secondary);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 1.5rem;
-    padding-left: 1.5rem;
-    pointer-events: none;
-}
 .limit {
     display: flex;
     justify-content: flex-end;
@@ -37,28 +62,20 @@
     font-size: 0.875rem;
 }
 
-.itemContainer:focus-within > .inputLabel {
+.wrapper:focus-within .label, .focused {
     color: var(--color-primary);
 }
   
-.itemContainer:focus-within > .inputLabel.error {
+.error, .wrapper:focus-within .label.error, .focused.error {
     color: var(--color-error);
 }
   
-.itemContainer:focus-within > .inputLabel.warning {
+.warning, .wrapper:focus-within .label.warning, .focused.warning{
     color: var(--color-highlighted);
 }
 
 .disabled {
     color: var(--color-text-disabled);
-}
-
-.error {
-    color: var(--color-error);
-}
-
-.warning {
-    color: var(--color-highlighted);
 }
 
 .block {
