--- a/src/Modal/index.module.css
+++ b/src/Modal/index.module.css
@@ -11,7 +11,7 @@
 .modal {
   background-color: var(--color-bg-grey-3);
   border-radius: 2.5rem;
-  padding: 1.5rem;
+  padding: 2.5rem;
   z-index: 999;
 }
 
@@ -25,4 +25,8 @@
   padding-top: 1.5rem;
   display: flex;
   justify-content: center;
+}
+
+.footer > * {
+  margin: 0 1rem;
 }
