--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -58,12 +58,15 @@
   border-radius: 1.5rem;
   border: 2px solid var(--color-primary);
   padding: 0.5rem;
+  padding-right: 0;
   box-shadow: 0 0 3rem var(--color-shadow);
   outline: none;
   min-width: 14rem;
   box-sizing: border-box;
   transition: 0.3s;
   z-index: 999;
+  max-height: 15rem;
+  overflow-y: scroll;
 }
 
 .menu.bottom {
@@ -72,6 +75,22 @@
 
 .menu.top {
   bottom: 110%;
+}
+
+.menu::-webkit-scrollbar-track {
+  background-color: transparent;
+  margin-top: 1.5rem;
+  margin-bottom: 1.5rem;
+}
+
+.menu::-webkit-scrollbar {
+  width: 0.5rem;
+  background-color: transparent;
+}
+
+.menu::-webkit-scrollbar-thumb {
+  border-radius: 1rem;
+  background-color: var(--color-bg-grey-3);
 }
 
 .menu > li {
