--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -1,88 +1,96 @@
 .wrapper {
-    display: inline-block;
-    width: 14rem;
-    margin: 10px 0;
+  display: inline-block;
+  width: 14rem;
+  margin: 10px 0;
 }
 .child {
-    position: relative;
+  position: relative;
 }
 
 .child > :not(.label) {
-    width: 100%;
+  width: 100%;
 }
 
 .child * {
-    margin: 0;
+  margin: 0;
 }
 
 .label {
-    font-family: var(--font-regular);
-    color: var(--color-text-secondary);
-    font-style: normal;
-    font-weight: normal;
-    font-size: 1rem;
-    line-height: 1.5rem;
-    position: absolute;
-    top: 0.75rem;
-    left: 1.5rem;
-    transition: 0.25s;
-    pointer-events: none;
-    z-index: 1;
+  font-family: var(--font-regular);
+  color: var(--color-text-secondary);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  position: absolute;
+  top: 0.75rem;
+  left: 1.5rem;
+  transition: 0.25s;
+  pointer-events: none;
+  z-index: 1;
 }
 
-.wrapper:focus-within .label, .focused {
-    font-size: 0.875rem;
-    line-height: 1.5rem;
-    top: -0.8rem;
-    background: var(--color-bg-input);
-    padding: 0 0.5rem;
-    left: 1rem;
-    border-radius: 1.5rem;
+.wrapper:focus-within .label,
+.focused {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+  top: -0.8rem;
+  background: var(--color-bg-input);
+  padding: 0 0.5rem;
+  left: 1rem;
+  border-radius: 1.5rem;
 }
 
 .wrapper input::placeholder {
-    color: transparent;
+  color: transparent;
 }
 
 .limit {
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 1rem;
-    font-family: var(--font-italic);
-    color: var(--color-border);
-    font-size: 0.875rem;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 1rem;
+  font-family: var(--font-italic);
+  color: var(--color-border);
+  font-size: 0.875rem;
 }
 
-.wrapper:focus-within .label, .focused {
-    color: var(--color-primary);
-}
-  
-.error, .wrapper:focus-within .label.error, .focused.error, .description.error {
-    color: var(--color-error);
+.wrapper:focus-within .label,
+.focused {
+  color: var(--color-primary);
 }
 
-  
-.warning, .wrapper:focus-within .label.warning, .focused.warning, .description.warning{
-    color: var(--color-highlighted);
+.error,
+.wrapper:focus-within .label.error,
+.focused.error,
+.description.error {
+  color: var(--color-error);
 }
 
-.disabled, label.disabled, .description.disabled {
-    color: var(--color-text-disabled);
+.warning,
+.wrapper:focus-within .label.warning,
+.focused.warning,
+.description.warning {
+  color: var(--color-highlighted);
+}
+
+.disabled,
+label.disabled,
+.description.disabled {
+  color: var(--color-text-disabled);
 }
 
 .block {
-    width: 100%;
+  width: 100%;
 }
-  
+
 .description {
-    font-family: var(--font-italic);
-    color: var(--color-text-secondary);
-    margin: 0;
-    font-size: 0.875rem;
-    height: 1.125rem;
-    padding-top: 0.125rem;
-    padding-left: 1.5rem;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
+  color: var(--color-text-secondary);
+  margin: 0;
+  font-size: 0.875rem;
+  height: 1.125rem;
+  padding-top: 0.125rem;
+  padding-left: 1.5rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
