fixed modal appearance

--- a/src/Modal/index.module.css
+++ b/src/Modal/index.module.css
@@ -11,22 +11,33 @@
 .modal {
   background-color: var(--color-bg-grey-3);
   border-radius: 2.5rem;
-  padding: 2.5rem;
+  padding: 1rem;
   z-index: 999;
 }
 
 .header {
-  padding-bottom: 1.5rem;
+  padding-bottom: 1rem;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+
+.body {
+  margin: 0 .7rem;
 }
 
 .footer {
   padding-top: 1.5rem;
+  padding-bottom: 1rem;
   display: flex;
   justify-content: center;
 }
 
 .footer > * {
-  margin: 0 1rem;
+  margin: 0 .7rem
+}
+
+.headerText {
+  padding-bottom: .5rem;
+  padding-left: .5rem;
 }
