--- a/src/List/index.module.css
+++ b/src/List/index.module.css
@@ -22,7 +22,7 @@
 }
 
 .item {
-  padding: 0.625rem 0;
+  padding: .3rem;
   border-radius: 2.5rem;
   background-color: var(--color-bg-input);
 }
@@ -37,11 +37,11 @@
 }
 
 .col:first-child {
-  padding-left: 1rem !important;
+  padding-left: .8rem !important;
 }
 
 .col:last-child {
-  padding-right: 1rem !important;
+  padding-right: .8rem !important;
 }
 
 .pag {
