set semibold font in Input, Select, Textarea

--- a/src/Textarea/index.module.css
+++ b/src/Textarea/index.module.css
@@ -2,7 +2,7 @@
   line-height: 1.4;
   outline: none;
   background: var(--color-bg-input);
-  font-family: var(--font-regular);
+  font-family: var(--font-semi-bold);
   font-size: 1rem;
   color: var(--color-text-primary);
   overflow-block: hidden;
