--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -13,7 +13,7 @@
   background: var(--color-bg-input);
   border: 1px solid var(--color-border);
   border-radius: 1.5rem;
-  font-family: var(--font-regular);
+  font-family: var(--font-semi-bold);
   font-style: normal;
   font-weight: bold;
   font-size: 1rem;
