--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -23,7 +23,7 @@
   background: var(--color-bg-input);
   border: 1px solid var(--color-border);
   border-radius: 1.5rem;
-  font-family: var(--font-regular);
+  font-family: var(--font-semi-bold);
   font-weight: bold;
   font-size: 1rem;
   min-width: 14rem;
@@ -52,6 +52,7 @@
 
 .menu {
   position: absolute;
+  font-family: var(--font-semi-bold);
   list-style-type: none;
   margin: 0;
   background: var(--color-bg-input);
