--- a/src/Modal/index.module.css
+++ b/src/Modal/index.module.css
@@ -10,8 +10,8 @@
 
 .modal {
   background-color: var(--color-bg-grey-3);
-  border-radius: 2.5rem;
-  padding: 1rem;
+  border-radius: 2rem;
+  padding: 1.5rem;
   z-index: 999;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .body {
-  margin: 0 .7rem;
+  margin: 0 0.7rem;
 }
 
 .footer {
@@ -34,10 +34,10 @@
 }
 
 .footer > * {
-  margin: 0 .7rem
+  margin: 0 0.7rem;
 }
 
 .headerText {
-  padding-bottom: .5rem;
-  padding-left: .5rem;
+  padding-bottom: 0.5rem;
+  padding-left: 0.5rem;
 }
