--- a/src/DatePicker/index.module.css
+++ b/src/DatePicker/index.module.css
@@ -1,4 +1,9 @@
 .wrapper {
+  position: relative;
+  display: inline-block;
+}
+
+.inputWrapper {
   display: inline-flex;
   position: relative;
 }
@@ -18,15 +23,16 @@
 }
 
 .icon {
-  position: absolute;
-  right: 0;
   cursor: pointer;
 }
 
 .picker {
-  width: 256px;
-  box-shadow: 0 16px 48px rgba(73, 92, 136, 0.15);
-  border-radius: 16px;
+  width: 16rem;
+  box-shadow: 0 1rem 4rem rgba(73, 92, 136, 0.15);
+  position: absolute;
+  top: 4rem;
+  border-radius: 1rem;
+  z-index: 1;
 }
 
 .pickerHeader {
@@ -34,25 +40,14 @@
   justify-content: space-between;
   background-color: var(--color-primary);
   color: var(--color-text-inverse);
-  border-radius: 16px 16px 0 0;
+  border-radius: 1rem 1rem 0 0;
 }
 
 .pickerHeaderItem {
-  padding: 16px 0;
+  padding: 1rem 0;
   text-align: center;
   cursor: pointer;
   position: relative;
-}
-
-.pickerHeaderItem.active:before {
-  content: '';
-  position: absolute;
-  bottom: 0;
-  left: 50%;
-  transform: translateX(-50%);
-  background-image: url('./bubble-cursor.svg');
-  height: 6px;
-  width: 16px;
 }
 
 .pickerHeaderItem:nth-child(odd) {
@@ -64,17 +59,73 @@
 }
 
 .pickerHeaderItem:nth-child(2) span {
-  border-left: 1px solid var(--color-text-inverse);
-  border-right: 1px solid var(--color-text-inverse);
+  border-left: 1px solid var(--color-primary-hover);
+  border-right: 1px solid var(--color-primary-hover);
   display: block;
 }
 
 .pickerBody {
-  padding: 16px 16px 0 16px;
+  padding: 1rem 1rem 1.75rem;
+  background-color: var(--color-bg-input);
+  border-radius: 0 0 1rem 1rem;
+  height: 12rem;
 }
 
-/* YEARS */
 .years {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: 0 0 -1rem 0;
+}
+
+.years li {
+  width: 4rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-bottom: 1rem;
+  cursor: pointer;
+  border-radius: 1rem;
+  transition: background-color 0.4s ease;
+  position: relative;
+}
+
+.years li:hover {
+  background-color: var(--color-bg-grey-2);
+}
+
+.switcher {
+  color: var(--color-text-secondary);
+  stroke: var(--color-text-secondary);
+}
+
+.years .switcher:hover {
+  background-color: transparent;
+  color: var(--color-primary);
+}
+
+.years .switcher svg * {
+  stroke: var(--color-text-secondary);
+}
+
+.years .switcher:hover svg * {
+  stroke: var(--color-primary);
+}
+
+.iconFirst {
+  position: absolute;
+  left: -0.5rem;
+}
+
+.iconLast {
+  position: absolute;
+  right: -0.5rem;
+}
+
+.days {
   display: flex;
   justify-content: space-between;
   flex-wrap: wrap;
@@ -83,18 +134,78 @@
   margin: 0;
 }
 
-.years li {
-  width: 64px;
-  height: 32px;
+.day {
+  width: 1.9375rem;
+  height: 1.9375rem;
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-bottom: 16px;
   cursor: pointer;
-  border-radius: 16px;
+  border-radius: 1rem;
   transition: background-color 0.4s ease;
 }
 
-.years li:hover {
+.anotherMonthDay {
+  opacity: 0;
+  cursor: default;
+}
+
+.weekend {
+  color: var(--color-error);;
+}
+
+.days li:hover {
   background-color: var(--color-bg-grey-2);
+}
+
+.days .anotherMonthDay:hover {
+  background-color: transparent;
+}
+
+.activeItem {
+  background-color: var(--color-chart-yellow);
+}
+
+li.activeItem:hover {
+  background-color: var(--color-chart-yellow);
+}
+
+.week {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  list-style: none;
+  padding: 0;
+  margin: -0.5rem 0 0 0;
+}
+
+.week li {
+  width: 2rem;
+  height: 2rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+}
+
+.tabArrow {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%) rotate(180deg);
+  height: 0.375rem;
+  width: 1rem;
+}
+
+.greenArrow {
+  position: absolute;
+  transform: translateX(-50%) rotate(180deg);
+  height: 0.75rem;
+  width: 1.5rem;
+  top: -0.75rem;
+  left: 3.75rem;
+}
+
+.headerItemDisabled {
+  opacity: 0.5;
 }
