--- a/src/NavPanel/index.module.css
+++ b/src/NavPanel/index.module.css
@@ -17,3 +17,23 @@
   margin-right: 1.5rem;
   margin-left: 1.5rem;
 }
+
+.searchIcon {
+  margin-left: -0.5rem;
+  margin-top: -0.05rem;
+}
+
+.searchContainer {
+  margin-right: 1.5rem;
+}
+
+.actionContainer {
+  display: flex;
+  align-items: center;
+}
+
+.helper {
+  display: inline-flex;
+  align-items: center;
+  margin-right: 1.5rem;
+}
