--- a/src/ActionInput/index.module.css
+++ b/src/ActionInput/index.module.css
@@ -5,22 +5,24 @@
   border: 1px solid;
   border-radius: 1.5rem;
   box-sizing: border-box;
+  padding: 1px;
+  background: var(--color-bg-input);
 }
 
 .inputContainer:hover, .inputContainer:focus-within {
   border: 2px solid;
+  padding: 0;
 }
 
-.disabled, .disabled:hover, .disabled:focus-within {
+.inputContainer.disabled {
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+}
+
+.inputContainer.disabled, .inputContainer.disabled:hover, .inputContainer.disabled:focus-within {
   border: 1px solid var(--color-text-disabled);
-}
-
-.disabled *, .disabled *:before, .disabled *:after {
-  color: var(--color-text-disabled) !important;
-  fill: var(--color-text-disabled) !important;
-  stroke: var(--color-text-disabled) !important;
-  border-color: var(--color-text-disabled) !important;
   pointer-events: none;
+  padding: 0;
 }
 
 .input {
@@ -30,8 +32,12 @@
   margin-right: 0.5rem;
   font-size: 1rem;
   width: 100%;
-  background-color: transparent;
+  background: transparent;
   color: var(--color-text-primary)
+}
+
+.input:disabled {
+  background: transparent;
 }
 
 .block {
@@ -39,8 +45,8 @@
 }
 
 .actions {
-display: inline-block;
-padding: 0 0.5rem;
-border-top-right-radius: 1.5rem;
-border-bottom-right-radius: 1.5rem;
+  display: inline-block;
+  padding: 0 0.5rem;
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
 }
