--- a/src/Multiselect/index.module.css
+++ b/src/Multiselect/index.module.css
@@ -1,53 +1,80 @@
 .container {
   position: relative;
   display: inline-block;
-  width: 14rem;
   margin-bottom: 1.25rem;
 }
 
-.container span {
-  pointer-events: none;
-}
-
-.labelContainer:focus-within {
-  z-index: 999;
-}
-
-.labelContainer {
-  outline: none;
+.container > label {
   margin: 0;
 }
 
-.input {
-  outline: none;
+.labelContainer {
   background: var(--color-bg-input);
   border: 1px solid var(--color-border);
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-around;
   border-radius: 1.5rem;
-  font-family: var(--font-semi-bold);
-  font-weight: bold;
-  font-size: 1rem;
-  min-width: 14rem;
-  height: 3rem;
-  color: var(--color-text-primary);
-  padding-top: 0.6875rem;
-  padding-bottom: 0.8125rem;
-  padding-left: 1.5rem;
   box-sizing: border-box;
+  padding: .3rem;
+  width: 450px;
+  cursor: text;
+  outline: none;
 }
 
-.input:focus,
-.input:hover {
-  border-width: 2px !important;
-  border-color: var(--color-primary);
+.labelContainer input {
+  display: none;
+}
+
+.labelContainer.disabled, .input:disabled {
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+}
+
+.labelContainer.disabled, .labelContainer.disabled:hover, .labelContainer.disabled:focus-within {
+  border: 1px solid var(--color-text-disabled);
+  pointer-events: none;
+  padding: 0;
+}
+
+.selectedItems {
+  width: 100%;
+}
+
+.selectedItem {
+  font-family: var(--font-regular);
+  min-width: 6rem;
+  background: var(--color-primary);
+  border-radius: 1rem;
+  color: var(--color-text-inverse);
+  display: inline-flex;
+  align-items: center;
+  outline: none;
+  box-sizing: border-box;
+  height: 2rem;
+  padding: 0 .5rem;
+  margin: 2px;
+  position: relative;
+  z-index: 2;
+}
+
+.selectedItem .title {
+  text-align: center;
+  width: 100%;
+  padding: 0 .5rem;
+}
+
+.selectedItem .close {
+  cursor: pointer;
 }
 
 .arrowIcon {
-  cursor: pointer;
-  position: absolute;
-  top: 0.75rem;
-  right: 0.5rem;
-  outline: none;
-  pointer-events: none;
+  padding: .6rem .7rem .4rem;
+}
+  
+.block {
+  width: 100%;
 }
 
 .menu {
@@ -62,14 +89,14 @@
   padding-right: 0;
   box-shadow: 0 0 3rem var(--color-shadow);
   outline: none;
-  min-width: 14rem;
+  min-width: 450px;
   box-sizing: border-box;
   transition: 0.3s;
   z-index: 999;
   max-height: 15rem;
   overflow-y: scroll;
 }
-
+  
 .menu.hide {
   display: none;
 }
@@ -113,64 +140,38 @@
   color: var(--color-text-disabled);
 }
 
-.labelContainer:focus-within .label.labelUp {
-  color: var(--color-primary);
+.labelContainer.opened,
+.container:hover .labelContainer:not(.disabled) {
+  border: 2px solid var(--color-primary);
+  padding: calc(.3rem - 1px);
 }
-
-.labelContainer.error .input {
-  border: solid 1px var(--color-error);
+.labelContainer.error.opened,
+.container:hover .labelContainer:not(.disabled).error {
+  border: 2px solid var(--color-error);
 }
-
-.labelContainer.error .input {
-  border: solid 1px var(--color-error);
-}
-
-.labelContainer.error {
-  border-color: var(--color-error);
-}
-
-.labelContainer.error .label.labelUp {
-  color: var(--color-error);
-}
-
-.labelContainer.error + .menu {
-  border-color: var(--color-error);
-}
-
-.labelContainer.warning .input {
-  border: solid 1px var(--color-highlighted);
-}
-
-.labelContainer.warning .input {
-  border: solid 1px var(--color-highlighted);
-}
-
-.labelContainer.warning + .menu {
-  border-color: var(--color-highlighted);
-}
-
-.labelContainer.warning .label.labelUp {
-  color: var(--color-highlighted);
-}
-
-.labelContainer.warning + .menu {
-  border-color: var(--color-highlighted);
-}
-
-.labelContainer.disabled .input:disabled {
-  border: solid 1px var(--color-border);
-  background: var(--color-bg-input-disabled);
-  color: var(--color-text-disabled);
+.labelContainer.warning.opened,
+.container:hover .labelContainer:not(.disabled).warning {
+  border: 2px solid var(--color-highlighted);
 }
 
 .labelContainer.disabled {
-  border-color: var(--color-border);
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+  padding: .3rem;
 }
 
-.labelContainer.disabled + .menu {
-  border-color: var(--color-border);
+.labelContainer.error {
+  border: 1px solid var(--color-error);
 }
 
-.block {
-  width: 100%;
+.labelContainer.warning {
+  border: 1px solid var(--color-highlighted);
+}
+
+.menu.error {
+  border: 2px solid var(--color-error);
+}
+
+.menu.warning {
+  border: 2px solid var(--color-highlighted);
 }
