--- a/src/Input/index.module.css
+++ b/src/Input/index.module.css
@@ -24,6 +24,10 @@
   box-sizing: border-box;
 }
 
+.input::placeholder {
+  font-family: var(--font-regular);
+}
+
 .input.withSuffix {
   padding-right: 3rem;
 }
