--- a/src/Notification/css/notification.module.css
+++ b/src/Notification/css/notification.module.css
@@ -22,7 +22,7 @@
   border-radius: 1rem;
   padding: 1rem ;
   box-shadow: 0px 1rem 3rem rgba(73, 92, 136, 0.15);
-  }
+}
 
 .notificationItem .notificationMessage {
   margin-left: 1rem;
@@ -41,6 +41,19 @@
   cursor: pointer;
 }
 
+.notificationParent {
+  box-sizing: border-box;
+  min-height: 1px;
+  position: static;
+  padding-left: 0px;
+  padding-right: 0px;
+  width: 25%;
+  flex: 0 0 25%;
+  max-width: 25%;
+  margin-left: 0%;;
+  right: auto;
+  left: auto;
+}
 .notificationContainerMobileTop .notificationItem,
 .notificationContainerMobileBottom .notificationItem,
 .notificationContainerMobileTop .notificationParent,
@@ -65,27 +78,36 @@
   margin-right: auto;
 }
 
-.notificationContainerTopCenter,
-.notificationContainerTopLeft,
-.notificationContainerTopRight,
-.notificationContainerBottomCenter,
-.notificationContainerBottomLeft,
-.notificationContainerBottomRight,
-.notificationContainerCenter {
-  /* width: 325px;
-  position: absolute;
-  pointer-events: all; */
-}
-
 .notificationContainerCenter,
 .notificationContainerTopCenter,
 .notificationContainerBottomCenter {
   display: flex;
   justify-content: center;
-  /* align-items: center;
-  flex-direction: column;
-  left: calc(50% - 162.5px); */
 }
+
+.rootNotice {
+  margin-left: 16px;
+  margin-right: 16px;
+  display: flex;
+  flex-wrap: wrap;
+  flex-grow: 0;
+  flex-shrink: 0;
+  align-items: normal;
+  margin-top: 1rem;
+}
+
+.start {
+  justify-content: start;
+}
+
+.end {
+  justify-content: flex-end;
+}
+
+.center {
+  justify-content: center;
+}
+
 
 .notificationContainerCenter {
   top: 20px;
