--- a/src/Notification/css/types.module.css
+++ b/src/Notification/css/types.module.css
@@ -8,11 +8,13 @@
 	}
 	0% {
 		opacity: 0;
-		transform: translate3d(0, -3000px, 0) scaleY(3)
+		top: -3000px
+		/* transform: translate3d(0, -3000px, 0) scaleY(3) */
 	}
 	90% {
 		opacity: 1;
-		transform: translate3d(0, 0, 0)
+		top: 0;
+		/* transform: translate3d(0, 0, 0) */
 	}
 
 }
@@ -24,6 +26,12 @@
 	to {
 		opacity: 0
 	}
+}
+
+.ps {
+	animation-duration: .5s;
+  animation-name: bounceInDown;
+  animation-iteration-count: 1;
 }
 
 .animate__bounceInDown {
