Fix description padding for FormItem

--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -100,6 +100,10 @@ label.disabled,
   width: 100%;
 }
 
+.paddingInput {
+  padding-bottom: 20px;
+}
+
 .description {
   color: var(--color-text-secondary);
   margin: 0;
