--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -2,175 +2,263 @@
   position: relative;
   display: inline-block;
   width: 14rem;
-  margin-bottom: 1.25rem;
 }
 
-.container span {
-  pointer-events: none;
-}
-
-.labelContainer:focus-within {
-  z-index: 999;
-}
-
-.labelContainer {
-  outline: none;
+.container > label {
   margin: 0;
 }
 
-.input {
-  outline: none;
-  background: var(--color-bg-input);
-  border: 1px solid var(--color-border);
-  border-radius: 1.5rem;
-  font-family: var(--font-semi-bold);
-  font-weight: bold;
-  font-size: 1rem;
-  min-width: 14rem;
-  height: 3rem;
-  color: var(--color-text-primary);
-  padding-top: 0.6875rem;
-  padding-bottom: 0.8125rem;
-  padding-left: 1.5rem;
-  box-sizing: border-box;
+.container.block {
+  width: 100%;
 }
 
-.input:focus,
-.input:hover {
-  border-width: 2px !important;
-  border-color: var(--color-primary);
+.container .flexed {
+  flex: 1;
+}
+
+.labelContainer {
+  display: flex;
+  background: var(--color-bg-input);
+  border: 1px solid var(--color-border);
+  position: relative;
+  display: inline-flex;
+  align-items: center;
+  justify-content: space-around;
+  border-radius: 1.5rem;
+  box-sizing: border-box;
+  padding: .3rem;
+  cursor: text;
+  outline: none;
+  min-height: 3rem;
+  width: 100%;
+}
+
+.labelContainer input {
+  border: 0;
+  outline: none;
+  background: transparent;
+}
+
+.labelContainer.multi input {
+  display: none;
+}
+
+.labelContainer .inside {
+  font-family: var(--font-semi-bold);
+  font-style: normal;
+  font-weight: bold;
+  font-size: 1rem;
+  padding-left: 1.2rem;
+}
+
+.labelContainer.disabled {
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+}
+
+.labelContainer.disabled, .labelContainer.disabled:hover, .labelContainer.disabled:focus-within {
+  border: 1px solid var(--color-text-disabled);
+  pointer-events: none;
+  padding: 0;
+}
+
+.labelContainer.opened,
+.container:hover .labelContainer:not(.disabled) {
+  border: 2px solid var(--color-primary);
+  padding: calc(.3rem - 1px);
+}
+
+.labelContainer.error.opened,
+.container:hover .labelContainer:not(.disabled).error {
+  border: 2px solid var(--color-error);
+}
+.labelContainer.warning.opened,
+.container:hover .labelContainer:not(.disabled).warning {
+  border: 2px solid var(--color-highlighted);
+}
+
+.labelContainer.disabled {
+  background: var(--color-bg-input-disabled);
+  color: var(--color-text-disabled);
+  padding: .3rem;
+}
+
+.labelContainer.error {
+  border: 1px solid var(--color-error);
+}
+
+.labelContainer.warning {
+  border: 1px solid var(--color-highlighted);
 }
 
 .arrowIcon {
   cursor: pointer;
-  position: absolute;
-  top: 1rem;
-  right: 1rem;
+  margin-right: .7rem;
   outline: none;
   pointer-events: none;
 }
 
 .menu {
   position: absolute;
+  visibility: visible;
   font-family: var(--font-semi-bold);
   list-style-type: none;
   margin: 0;
   background: var(--color-bg-input);
   border-radius: 1.5rem;
   border: 2px solid var(--color-primary);
-  padding: 0.5rem;
-  padding-right: 0;
   box-shadow: 0 0 3rem var(--color-shadow);
   outline: none;
-  min-width: 14rem;
   box-sizing: border-box;
-  transition: 0.3s;
+  transition: .3s;
   z-index: 999;
-  max-height: 15rem;
+  opacity: 1;
+  padding: .5rem;
+  padding-right: .3rem;
+  width: 100%;
+}
+
+.menu.withSearch {
+  padding-top: 0;
+}
+
+.listparent {
   overflow-y: scroll;
+  padding-right: .2rem;
 }
 
 .menu.hide {
-  display: none;
+  visibility: hidden;
+  opacity: 0;
 }
 
 .menu.bottom {
-  top: 110%;
+  top: 0;
 }
 
 .menu.top {
-  bottom: 110%;
+  bottom: 0;
 }
 
-.menu::-webkit-scrollbar-track {
+.listparent::-webkit-scrollbar-track {
+  background: transparent;
+  margin-top: .5rem;
+  margin-bottom: .5rem;
+}
+
+.listparent::-webkit-scrollbar {
+  width: .5rem;
+  opacity: 0;
   background-color: transparent;
-  margin-top: 1.5rem;
-  margin-bottom: 1.5rem;
 }
 
-.menu::-webkit-scrollbar {
-  width: 0.5rem;
-  background-color: transparent;
-}
-
-.menu::-webkit-scrollbar-thumb {
+.listparent::-webkit-scrollbar-thumb {
   border-radius: 1rem;
   background-color: var(--color-bg-grey-3);
 }
 
-.menu > li {
+.list .item {
+  display: flex;
+  align-items: center;
   border-radius: 1rem;
-  padding: 0.5rem 1rem;
+  padding-left: 1rem;
   line-height: 1.5rem;
   cursor: pointer;
+  font-family: var(--font-regular)
 }
 
-.menu > li.selected {
+.list .item.selected, .menu .item:hover {
   background-color: var(--color-bg-grey-3);
 }
 
-.menu > li.emptyList {
+.list .item.selected {
+  font-family: var(--font-bold)
+}
+
+.list .item.emptyList {
   color: var(--color-text-disabled);
 }
 
-.labelContainer:focus-within .label.labelUp {
-  color: var(--color-primary);
+.list .groupTitle { 
+  display: flex;
+  background: var(--color-bg-grey-4);
+  border-radius: 1rem;
+  padding: 0 1rem;
+  line-height: 1.5rem;
 }
 
-.labelContainer.error .input {
-  border: solid 1px var(--color-error);
+.list .groupArrow {
+  margin-left: .5rem;
 }
 
-.labelContainer.error .input {
-  border: solid 1px var(--color-error);
+.list .group {
+  padding: .25rem;
+  padding-left: 1rem;
 }
 
-.labelContainer.error {
-  border-color: var(--color-error);
+.emptyState {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-bottom: 1.5rem;
 }
 
-.labelContainer.error .label.labelUp {
-  color: var(--color-error);
+.emptyIcon {
+  margin: .5rem;
+}
+
+.emptyText {
+  text-align: center;
+  font-family: var(--font-regular);
+  color: var(--color-text-secondary);
+  font-style: italic;
+}
+
+.container .searchinput {
+  padding-left: 1rem;
+}
+
+.container .searchinput:focus,
+.container .searchinput:not([disabled]):hover {
+  padding-left: calc(1rem-1px);
 }
 
 .labelContainer.error + .menu {
   border-color: var(--color-error);
 }
 
-.labelContainer.warning .input {
-  border: solid 1px var(--color-highlighted);
-}
-
-.labelContainer.warning .input {
-  border: solid 1px var(--color-highlighted);
-}
-
 .labelContainer.warning + .menu {
   border-color: var(--color-highlighted);
 }
 
-.labelContainer.warning .label.labelUp {
-  color: var(--color-highlighted);
+.selectedItem {
+  font-family: var(--font-regular);
+  min-width: 6rem;
+  background: var(--color-primary);
+  border-radius: 1rem;
+  color: var(--color-bg-input);
+  display: inline-flex;
+  align-items: center;
+  outline: none;
+  box-sizing: border-box;
+  height: 2rem;
+  padding: 0 .5rem;
+  margin: 2px;
+  position: relative;
+  z-index: 2;
 }
 
-.labelContainer.warning + .menu {
-  border-color: var(--color-highlighted);
-}
-
-.labelContainer.disabled .input:disabled {
-  border: solid 1px var(--color-border);
-  background: var(--color-bg-input-disabled);
-  color: var(--color-text-disabled);
-}
-
-.labelContainer.disabled {
-  border-color: var(--color-border);
-}
-
-.labelContainer.disabled + .menu {
-  border-color: var(--color-border);
-}
-
-.block {
+.selectedItem .title {
+  text-align: center;
   width: 100%;
+  padding: 0 .5rem;
+}
+
+.selectedItem .close {
+  cursor: pointer;
+}
+
+.tick {
+  padding-right: .6rem;    
 }
