added text highlight in Select

--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -262,3 +262,9 @@
 .tick {
   padding-right: .6rem;    
 }
+
+.highlight {
+  background: transparent;
+  color: var(--color-primary);
+  font-family: var(--font-bold)
+}
