--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -35,6 +35,7 @@
 
 .labelContainer input {
   border: 0;
+  min-width: 0;
   outline: none;
   background: transparent;
 }
@@ -93,7 +94,7 @@
 
 .arrowIcon {
   cursor: pointer;
-  margin-right: .7rem;
+  margin-right: 1rem;
   outline: none;
   pointer-events: none;
 }
