--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -25,7 +25,7 @@
   position: absolute;
   transition: 0.25s;
   pointer-events: none;
-  z-index: 1;
+  z-index: 9999;
 }
 
 .fluid {
@@ -36,10 +36,17 @@
 }
 
 .flat {
-  font-size: 0.875rem;
-  line-height: 1.5rem;
   top: -1.4rem;
   left: 1rem;
+}
+
+.flat .label {
+  font-size: 0.875rem;
+  line-height: 1.5rem;
+}
+
+.flat .label, .labelTop {
+  z-index: 1;
 }
 
 .wrapper:focus-within .fluid,
