--- a/src/Accordion/index.module.css
+++ b/src/Accordion/index.module.css
@@ -10,7 +10,6 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  transition: .4s;
 }
 
 .default .title{
@@ -33,8 +32,20 @@
   flex: 1
 }
 
+.show {
+  transition: max-height 0.4s ease-in;
+}
+
+.hide {
+  transition: max-height 0.4s cubic-bezier(0, 1, 0, 1)
+  
+}
+
 .element .body {
   overflow: hidden;
-  transition: height .4s;
   box-sizing: border-box;
+}
+
+.mrNone {
+  margin-bottom: 0;
 }
