--- a/src/Select/index.module.css
+++ b/src/Select/index.module.css
@@ -222,7 +222,7 @@
 
 .container .searchinput:focus,
 .container .searchinput:not([disabled]):hover {
-  padding-left: calc(1rem-1px);
+  padding-left: calc(1rem - 1px);
 }
 
 .labelContainer.error + .menu {
