--- a/src/RadioGroup/index.module.css
+++ b/src/RadioGroup/index.module.css
@@ -9,11 +9,11 @@
 }
 
 .radioRow:not(:last-child) {
-  padding-right: 15px;
+  padding-right: 2rem;
 }
 
 .radioColumn:not(:first-child) {
-  padding-top: 10px;
+  padding-top: 1.5rem;
 }
 
 .radio {
@@ -27,10 +27,17 @@
   opacity: 1;
 }
 
+
+
 .label {
   position: relative;
-  padding: 0 0 0 35px;
+  padding: 0;
+  padding-left: 2rem;
   cursor: pointer;
+}
+
+.radio:not(:checked) + span:before {
+  border-color: var(--color-border);
 }
 
 .label span:before {
@@ -64,7 +71,6 @@
   height: 12px;
   border-radius: 50%;
   background-color: var(--color-primary);
-  box-shadow: inset 0 1px 1px rgba(0, 0, 0, 0.5);
   opacity: 0;
   transition: opacity 0.2s;
 }
