--- a/src/Tooltip/index.module.css
+++ b/src/Tooltip/index.module.css
@@ -14,7 +14,7 @@
   display: inline-block;
   padding: 1rem 1.5rem;
   border-radius: 1rem;
-  color: var(--color-text-inverse);
+  color: var(--color-bg-input);
   position: relative;
   box-shadow: 0 16px 48px rgba(73, 92, 136, 0.15);
 }
@@ -23,7 +23,6 @@
   visibility: hidden;
   opacity: 0;
   position: absolute;
-  text-align: center;
   max-width: 22.5rem;
   transition: 0.3s linear;
 }
