Fixed green label on error field

--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -71,7 +71,7 @@
 
 .wrapper:focus-within .label,
 .child:hover .focused.default,
-.focused :not(.label) {
+.focused :not(.error) :not(.label) {
   color: var(--color-primary);
 }
 
