Removed strange style with primary color for :not label

--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -70,8 +70,7 @@
 }
 
 .wrapper:focus-within .label,
-.child:hover .focused.default,
-.focused :not(.error) :not(.label) {
+.child:hover .focused.default {
   color: var(--color-primary);
 }
 
