Commented out strange styles (they break placeholder transition on default field)

--- a/src/FormItem/index.module.css
+++ b/src/FormItem/index.module.css
@@ -74,9 +74,9 @@
   color: var(--color-primary);
 }
 
-.child:hover .focused.default {
+/* .child:hover .focused.default {
   transition: none;
-}
+} */
 
 .error,
 .wrapper:focus-within .label.error,
